fix note entry overflowing screen

--- a/src/x-esg-week-view/styles.scss
+++ b/src/x-esg-week-view/styles.scss
@@ -193,6 +193,10 @@
                 width: 55px;
                 margin-left: auto;
                 margin-right: auto;
+
+                &.no-note {
+                    border-color: red;
+                }
             }
         }
     }
@@ -209,6 +213,8 @@
         textarea {
             border: none;
             font-family: $font-primary;
+            height: 50px;
+            width: 300px;
 
             &:focus {
                 outline: none;
@@ -222,8 +228,9 @@
         position: absolute;
         // max-width: 30em;
 
-        top: 35px;
+        top: 40px;
         left: 0px;
+        // right: 0px;
 
         // looks
         background-color: #fff;
@@ -248,6 +255,14 @@
             // looks
             border-bottom-color: #fff;
             filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, .1));
+        }
+
+        &.note-reverse {
+            transform: translateX(-200px);
+
+            &::before {
+                transform: translateX(200px);
+            }
         }
     }
 
